--- a/GuiApplication/CalculationPage.ui
+++ b/GuiApplication/CalculationPage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>705</width>
-    <height>427</height>
+    <width>931</width>
+    <height>603</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,14 +16,14 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>50</y>
-     <width>331</width>
-     <height>71</height>
+     <x>40</x>
+     <y>60</y>
+     <width>411</width>
+     <height>91</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 30pt &quot;华文楷体&quot;;</string>
+    <string notr="true">font: 34pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>各科平均成绩：</string>
@@ -34,22 +34,28 @@
     <rect>
      <x>60</x>
      <y>170</y>
-     <width>121</width>
-     <height>16</height>
+     <width>271</width>
+     <height>111</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font: 18pt &quot;华文楷体&quot;;</string>
+   </property>
    <property name="text">
-    <string>C语言课程设计成绩：</string>
+    <string>C语言课程设计平均成绩：</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>170</y>
-     <width>54</width>
-     <height>12</height>
+     <x>330</x>
+     <y>180</y>
+     <width>121</width>
+     <height>91</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 18pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -58,11 +64,14 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>350</x>
+     <x>450</x>
      <y>170</y>
-     <width>121</width>
-     <height>16</height>
+     <width>271</width>
+     <height>111</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 18pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>高等数学平均成绩：</string>
@@ -71,11 +80,14 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>170</y>
-     <width>54</width>
-     <height>12</height>
+     <x>690</x>
+     <y>180</y>
+     <width>171</width>
+     <height>91</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 18pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -85,10 +97,13 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>240</y>
-     <width>111</width>
-     <height>16</height>
+     <y>390</y>
+     <width>241</width>
+     <height>81</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 18pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>大学英语平均成绩：</string>
@@ -97,11 +112,14 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>240</y>
-     <width>54</width>
-     <height>12</height>
+     <x>330</x>
+     <y>390</y>
+     <width>151</width>
+     <height>81</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 18pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -110,29 +128,44 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>370</y>
-     <width>75</width>
-     <height>23</height>
+     <x>700</x>
+     <y>520</y>
+     <width>151</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 18pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>370</y>
-     <width>75</width>
-     <height>23</height>
+     <x>-20</x>
+     <y>-20</y>
+     <width>971</width>
+     <height>641</height>
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>background.jpg</pixmap>
    </property>
   </widget>
+  <zorder>label_8</zorder>
+  <zorder>label</zorder>
+  <zorder>label_2</zorder>
+  <zorder>label_3</zorder>
+  <zorder>label_4</zorder>
+  <zorder>label_5</zorder>
+  <zorder>label_6</zorder>
+  <zorder>label_7</zorder>
+  <zorder>pushButton</zorder>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
