--- a/GuiApplication/DeletePage.ui
+++ b/GuiApplication/DeletePage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>707</width>
-    <height>502</height>
+    <width>922</width>
+    <height>590</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,11 +16,14 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>50</y>
-     <width>171</width>
-     <height>20</height>
+     <x>180</x>
+     <y>60</y>
+     <width>221</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -29,21 +32,27 @@
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>430</x>
      <y>60</y>
-     <width>113</width>
-     <height>20</height>
+     <width>151</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>130</y>
-     <width>131</width>
-     <height>31</height>
+     <x>70</x>
+     <y>120</y>
+     <width>191</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>以下是你查询到结果：</string>
@@ -52,11 +61,14 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>180</y>
-     <width>54</width>
-     <height>12</height>
+     <x>120</x>
+     <y>190</y>
+     <width>101</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>学号</string>
@@ -65,11 +77,14 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>280</y>
-     <width>54</width>
-     <height>12</height>
+     <x>120</x>
+     <y>340</y>
+     <width>81</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>性别</string>
@@ -78,11 +93,14 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>230</y>
-     <width>54</width>
-     <height>12</height>
+     <x>120</x>
+     <y>260</y>
+     <width>81</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>姓名</string>
@@ -91,11 +109,14 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>330</y>
-     <width>81</width>
-     <height>16</height>
+     <x>120</x>
+     <y>420</y>
+     <width>101</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>出生日期</string>
@@ -104,11 +125,14 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>380</y>
-     <width>54</width>
-     <height>12</height>
+     <x>120</x>
+     <y>490</y>
+     <width>111</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>年龄</string>
@@ -117,10 +141,10 @@
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>170</y>
-     <width>121</width>
-     <height>31</height>
+     <x>440</x>
+     <y>180</y>
+     <width>171</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="mouseTracking">
@@ -134,6 +158,9 @@
    </property>
    <property name="autoFillBackground">
     <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>C语言课程设计成绩</string>
@@ -151,11 +178,14 @@
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>360</x>
-     <y>210</y>
-     <width>81</width>
-     <height>21</height>
+     <x>440</x>
+     <y>260</y>
+     <width>111</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>高等数学成绩</string>
@@ -164,11 +194,14 @@
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
-     <x>360</x>
-     <y>250</y>
-     <width>101</width>
+     <x>440</x>
+     <y>360</y>
+     <width>111</width>
      <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>大学英语成绩</string>
@@ -177,11 +210,14 @@
   <widget class="QPushButton" name="SearchButton">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>50</y>
-     <width>75</width>
-     <height>23</height>
+     <x>610</x>
+     <y>60</y>
+     <width>121</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>查找</string>
@@ -190,11 +226,14 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>450</y>
-     <width>75</width>
-     <height>23</height>
+     <x>730</x>
+     <y>530</y>
+     <width>131</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string/>
@@ -203,11 +242,14 @@
   <widget class="QPushButton" name="deleteButton">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>450</y>
-     <width>101</width>
-     <height>23</height>
+     <x>560</x>
+     <y>530</y>
+     <width>131</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>删除选中项目</string>
@@ -216,11 +258,14 @@
   <widget class="QCheckBox" name="checkBox">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>180</y>
-     <width>71</width>
-     <height>16</height>
+     <x>800</x>
+     <y>200</y>
+     <width>81</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string/>
@@ -229,11 +274,14 @@
   <widget class="QCheckBox" name="checkBox_2">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>210</y>
+     <x>800</x>
+     <y>280</y>
      <width>71</width>
      <height>16</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string/>
@@ -242,11 +290,14 @@
   <widget class="QCheckBox" name="checkBox_3">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>250</y>
+     <x>800</x>
+     <y>380</y>
      <width>71</width>
      <height>16</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string/>
@@ -255,11 +306,14 @@
   <widget class="QLabel" name="label_11">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>170</y>
-     <width>91</width>
-     <height>31</height>
+     <x>280</x>
+     <y>180</y>
+     <width>111</width>
+     <height>61</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -268,11 +322,14 @@
   <widget class="QLabel" name="label_12">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>230</y>
-     <width>54</width>
-     <height>12</height>
+     <x>280</x>
+     <y>260</y>
+     <width>121</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -281,11 +338,14 @@
   <widget class="QLabel" name="label_13">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>280</y>
-     <width>54</width>
-     <height>12</height>
+     <x>280</x>
+     <y>340</y>
+     <width>101</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -294,11 +354,14 @@
   <widget class="QLabel" name="label_14">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>330</y>
-     <width>54</width>
-     <height>12</height>
+     <x>280</x>
+     <y>420</y>
+     <width>101</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -307,11 +370,14 @@
   <widget class="QLabel" name="label_15">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>380</y>
-     <width>54</width>
-     <height>12</height>
+     <x>280</x>
+     <y>490</y>
+     <width>101</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -320,11 +386,14 @@
   <widget class="QLabel" name="label_16">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>180</y>
-     <width>54</width>
-     <height>12</height>
+     <x>640</x>
+     <y>190</y>
+     <width>111</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -333,11 +402,14 @@
   <widget class="QLabel" name="label_17">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>220</y>
-     <width>54</width>
-     <height>12</height>
+     <x>640</x>
+     <y>260</y>
+     <width>111</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -346,11 +418,14 @@
   <widget class="QLabel" name="label_18">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>260</y>
-     <width>54</width>
-     <height>12</height>
+     <x>640</x>
+     <y>360</y>
+     <width>101</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -359,16 +434,62 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>450</y>
-     <width>75</width>
-     <height>23</height>
+     <x>390</x>
+     <y>530</y>
+     <width>131</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
+   </property>
+   <property name="text">
+    <string>删除此人</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_19">
+   <property name="geometry">
+    <rect>
+     <x>-10</x>
+     <y>-10</y>
+     <width>951</width>
+     <height>621</height>
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>background.jpg</pixmap>
    </property>
   </widget>
+  <zorder>label_19</zorder>
+  <zorder>label</zorder>
+  <zorder>lineEdit</zorder>
+  <zorder>label_2</zorder>
+  <zorder>label_3</zorder>
+  <zorder>label_4</zorder>
+  <zorder>label_5</zorder>
+  <zorder>label_6</zorder>
+  <zorder>label_7</zorder>
+  <zorder>label_8</zorder>
+  <zorder>label_9</zorder>
+  <zorder>label_10</zorder>
+  <zorder>SearchButton</zorder>
+  <zorder>pushButton_2</zorder>
+  <zorder>deleteButton</zorder>
+  <zorder>checkBox</zorder>
+  <zorder>checkBox_2</zorder>
+  <zorder>checkBox_3</zorder>
+  <zorder>label_11</zorder>
+  <zorder>label_12</zorder>
+  <zorder>label_13</zorder>
+  <zorder>label_14</zorder>
+  <zorder>label_15</zorder>
+  <zorder>label_16</zorder>
+  <zorder>label_17</zorder>
+  <zorder>label_18</zorder>
+  <zorder>pushButton</zorder>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <tabstops>
