--- a/GuiApplication/FormHomePage.ui
+++ b/GuiApplication/FormHomePage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>904</width>
-    <height>462</height>
+    <width>924</width>
+    <height>593</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,20 +17,23 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
-     <width>881</width>
-     <height>371</height>
+     <y>20</y>
+     <width>901</width>
+     <height>501</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>780</x>
-     <y>420</y>
-     <width>75</width>
-     <height>23</height>
+     <x>720</x>
+     <y>530</y>
+     <width>131</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>PushButton</string>
@@ -39,16 +42,39 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>630</x>
-     <y>420</y>
-     <width>75</width>
-     <height>23</height>
+     <x>550</x>
+     <y>530</y>
+     <width>131</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
+   </property>
+   <property name="text">
+    <string>显示数据</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>-20</x>
+     <y>-10</y>
+     <width>961</width>
+     <height>631</height>
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>background.jpg</pixmap>
    </property>
   </widget>
+  <zorder>label</zorder>
+  <zorder>tableView</zorder>
+  <zorder>pushButton</zorder>
+  <zorder>pushButton_2</zorder>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
