--- a/GuiApplication/RankPage.ui
+++ b/GuiApplication/RankPage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>893</width>
-    <height>516</height>
+    <width>923</width>
+    <height>590</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,21 +16,24 @@
   <widget class="QTableView" name="tableView">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>30</y>
-     <width>851</width>
-     <height>371</height>
+     <x>10</x>
+     <y>10</y>
+     <width>901</width>
+     <height>461</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="CstudyButton">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>430</y>
-     <width>121</width>
-     <height>23</height>
+     <x>150</x>
+     <y>490</y>
+     <width>191</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>PushButton</string>
@@ -39,11 +42,14 @@
   <widget class="QPushButton" name="MathButton">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>430</y>
-     <width>121</width>
-     <height>23</height>
+     <x>360</x>
+     <y>490</y>
+     <width>161</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>PushButton</string>
@@ -52,11 +58,14 @@
   <widget class="QPushButton" name="EnglishButton">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>430</y>
-     <width>121</width>
-     <height>23</height>
+     <x>540</x>
+     <y>490</y>
+     <width>161</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>PushButton</string>
@@ -65,14 +74,14 @@
   <widget class="QPushButton" name="EXIT">
    <property name="geometry">
     <rect>
-     <x>650</x>
-     <y>450</y>
-     <width>121</width>
-     <height>31</height>
+     <x>730</x>
+     <y>510</y>
+     <width>151</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 15pt &quot;华文楷体&quot;;</string>
+    <string notr="true">font: 12pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>PushButton</string>
@@ -81,11 +90,14 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>470</y>
-     <width>71</width>
-     <height>16</height>
+     <x>40</x>
+     <y>535</y>
+     <width>121</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 15pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>降序排序</string>
@@ -94,11 +106,14 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>440</y>
-     <width>54</width>
-     <height>12</height>
+     <x>40</x>
+     <y>480</y>
+     <width>131</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 15pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>升序排序</string>
@@ -107,11 +122,14 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>470</y>
-     <width>121</width>
-     <height>21</height>
+     <x>150</x>
+     <y>540</y>
+     <width>191</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>PushButton</string>
@@ -120,11 +138,14 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>470</y>
-     <width>121</width>
-     <height>23</height>
+     <x>360</x>
+     <y>540</y>
+     <width>161</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>PushButton</string>
@@ -133,16 +154,46 @@
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>470</y>
-     <width>121</width>
-     <height>23</height>
+     <x>540</x>
+     <y>540</y>
+     <width>161</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>PushButton</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>-10</x>
+     <y>-20</y>
+     <width>941</width>
+     <height>621</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>background.jpg</pixmap>
+   </property>
+  </widget>
+  <zorder>label_3</zorder>
+  <zorder>tableView</zorder>
+  <zorder>CstudyButton</zorder>
+  <zorder>MathButton</zorder>
+  <zorder>EnglishButton</zorder>
+  <zorder>EXIT</zorder>
+  <zorder>label</zorder>
+  <zorder>label_2</zorder>
+  <zorder>pushButton</zorder>
+  <zorder>pushButton_2</zorder>
+  <zorder>pushButton_3</zorder>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
