--- a/GuiApplication/RevisePage.ui
+++ b/GuiApplication/RevisePage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>715</width>
-    <height>508</height>
+    <width>924</width>
+    <height>593</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,11 +16,14 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>380</y>
-     <width>54</width>
-     <height>12</height>
+     <x>110</x>
+     <y>450</y>
+     <width>111</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>年龄</string>
@@ -30,10 +33,13 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>40</y>
-     <width>171</width>
-     <height>20</height>
+     <y>20</y>
+     <width>221</width>
+     <height>61</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>请输入学号进行查询：</string>
@@ -42,10 +48,10 @@
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>170</y>
-     <width>131</width>
-     <height>31</height>
+     <x>400</x>
+     <y>160</y>
+     <width>171</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="mouseTracking">
@@ -59,6 +65,9 @@
    </property>
    <property name="autoFillBackground">
     <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>C语言课程设计成绩</string>
@@ -76,11 +85,14 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>230</y>
-     <width>54</width>
-     <height>12</height>
+     <x>110</x>
+     <y>250</y>
+     <width>91</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>姓名</string>
@@ -89,11 +101,14 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>70</y>
-     <width>75</width>
-     <height>23</height>
+     <x>630</x>
+     <y>40</y>
+     <width>101</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>查找</string>
@@ -102,11 +117,14 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>130</y>
-     <width>131</width>
-     <height>31</height>
+     <x>60</x>
+     <y>100</y>
+     <width>181</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>以下是你查询到结果：</string>
@@ -115,11 +133,14 @@
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>240</y>
-     <width>101</width>
-     <height>41</height>
+     <x>400</x>
+     <y>310</y>
+     <width>121</width>
+     <height>61</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>大学英语成绩</string>
@@ -128,11 +149,14 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>180</y>
-     <width>54</width>
-     <height>12</height>
+     <x>108</x>
+     <y>170</y>
+     <width>91</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>学号</string>
@@ -141,21 +165,27 @@
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>360</x>
+     <x>420</x>
      <y>40</y>
-     <width>113</width>
-     <height>20</height>
+     <width>191</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>280</y>
-     <width>54</width>
-     <height>12</height>
+     <x>110</x>
+     <y>310</y>
+     <width>111</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>性别</string>
@@ -164,11 +194,14 @@
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>210</y>
-     <width>81</width>
-     <height>21</height>
+     <x>400</x>
+     <y>250</y>
+     <width>121</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>高等数学成绩</string>
@@ -177,11 +210,14 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>330</y>
-     <width>81</width>
-     <height>16</height>
+     <x>110</x>
+     <y>370</y>
+     <width>131</width>
+     <height>61</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>出生日期</string>
@@ -190,11 +226,14 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>450</y>
-     <width>111</width>
-     <height>21</height>
+     <x>500</x>
+     <y>530</y>
+     <width>151</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>修改改动项目</string>
@@ -203,11 +242,14 @@
   <widget class="QPushButton" name="pushButton_4">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>450</y>
-     <width>75</width>
-     <height>23</height>
+     <x>700</x>
+     <y>530</y>
+     <width>141</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>返回上一级</string>
@@ -216,83 +258,146 @@
   <widget class="QLineEdit" name="lineEdit_2">
    <property name="geometry">
     <rect>
-     <x>190</x>
+     <x>230</x>
      <y>180</y>
-     <width>113</width>
+     <width>111</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_3">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>230</y>
+     <x>230</x>
+     <y>260</y>
      <width>113</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_4">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>280</y>
+     <x>230</x>
+     <y>320</y>
      <width>113</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_5">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>330</y>
+     <x>230</x>
+     <y>390</y>
      <width>113</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_6">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>380</y>
+     <x>230</x>
+     <y>460</y>
      <width>113</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_7">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>610</x>
      <y>180</y>
      <width>113</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
+   </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_8">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>220</y>
+     <x>610</x>
+     <y>260</y>
      <width>113</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_9">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>250</y>
+     <x>610</x>
+     <y>330</y>
      <width>113</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;华文楷体&quot;;</string>
+   </property>
   </widget>
+  <widget class="QLabel" name="label_11">
+   <property name="geometry">
+    <rect>
+     <x>-10</x>
+     <y>-20</y>
+     <width>931</width>
+     <height>641</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>background.jpg</pixmap>
+   </property>
+  </widget>
+  <zorder>label_11</zorder>
+  <zorder>label_7</zorder>
+  <zorder>label</zorder>
+  <zorder>label_8</zorder>
+  <zorder>label_5</zorder>
+  <zorder>pushButton</zorder>
+  <zorder>label_2</zorder>
+  <zorder>label_10</zorder>
+  <zorder>label_3</zorder>
+  <zorder>lineEdit</zorder>
+  <zorder>label_4</zorder>
+  <zorder>label_9</zorder>
+  <zorder>label_6</zorder>
+  <zorder>pushButton_2</zorder>
+  <zorder>pushButton_4</zorder>
+  <zorder>lineEdit_2</zorder>
+  <zorder>lineEdit_3</zorder>
+  <zorder>lineEdit_4</zorder>
+  <zorder>lineEdit_5</zorder>
+  <zorder>lineEdit_6</zorder>
+  <zorder>lineEdit_7</zorder>
+  <zorder>lineEdit_8</zorder>
+  <zorder>lineEdit_9</zorder>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
