--- a/GuiApplication/StudentMenu.ui
+++ b/GuiApplication/StudentMenu.ui
@@ -6,40 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>839</width>
-    <height>520</height>
+    <width>910</width>
+    <height>581</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>StudentMenu</string>
   </property>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>-40</x>
-     <y>-10</y>
-     <width>871</width>
-     <height>541</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap>../../QtGuiApplication/QtGuiApplication1/normal background.jpg</pixmap>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QPushButton" name="EntryButton">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>280</x>
      <y>130</y>
-     <width>251</width>
-     <height>31</height>
+     <width>301</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>1.录入学生成绩</string>
@@ -48,11 +32,14 @@
   <widget class="QPushButton" name="DeleteButton">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>170</y>
-     <width>251</width>
-     <height>31</height>
+     <x>280</x>
+     <y>180</y>
+     <width>301</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>2.删除学生成绩</string>
@@ -61,11 +48,14 @@
   <widget class="QPushButton" name="ReviseButton">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>210</y>
-     <width>251</width>
-     <height>31</height>
+     <x>280</x>
+     <y>230</y>
+     <width>301</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>3.修改学生成绩</string>
@@ -74,11 +64,14 @@
   <widget class="QPushButton" name="DisPlayButton">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>250</y>
-     <width>251</width>
-     <height>31</height>
+     <x>280</x>
+     <y>280</y>
+     <width>301</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>4.显示全部学生信息</string>
@@ -87,11 +80,14 @@
   <widget class="QPushButton" name="CalculationButton">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>290</y>
-     <width>251</width>
-     <height>31</height>
+     <x>280</x>
+     <y>330</y>
+     <width>301</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>5.计算平均成绩</string>
@@ -100,24 +96,30 @@
   <widget class="QPushButton" name="SearchButton">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>330</y>
-     <width>251</width>
-     <height>31</height>
+     <x>280</x>
+     <y>380</y>
+     <width>301</width>
+     <height>41</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;华文楷体&quot;;</string>
+   </property>
    <property name="text">
-    <string>6.查询学生成绩(学号，姓名)</string>
+    <string>6.查询学生信息</string>
    </property>
   </widget>
   <widget class="QPushButton" name="RankButton">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>370</y>
-     <width>251</width>
-     <height>31</height>
+     <x>280</x>
+     <y>430</y>
+     <width>301</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>7.按单科成绩排序</string>
@@ -126,11 +128,14 @@
   <widget class="QPushButton" name="Exit">
    <property name="geometry">
     <rect>
-     <x>670</x>
-     <y>450</y>
-     <width>71</width>
+     <x>710</x>
+     <y>510</y>
+     <width>141</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;华文楷体&quot;;</string>
    </property>
    <property name="text">
     <string>Exit</string>
@@ -139,7 +144,7 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>250</x>
      <y>40</y>
      <width>431</width>
      <height>71</height>
@@ -152,6 +157,35 @@
     <string>学生信息管理系统菜单</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>-10</x>
+     <y>-10</y>
+     <width>931</width>
+     <height>591</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../../QtGuiApplication/QtGuiApplication1/normal background.jpg</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <zorder>label_3</zorder>
+  <zorder>EntryButton</zorder>
+  <zorder>DeleteButton</zorder>
+  <zorder>ReviseButton</zorder>
+  <zorder>DisPlayButton</zorder>
+  <zorder>CalculationButton</zorder>
+  <zorder>SearchButton</zorder>
+  <zorder>RankButton</zorder>
+  <zorder>Exit</zorder>
+  <zorder>label_2</zorder>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
